--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,11 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Anatolii (Tola) Kokoza
+username: Anatolii Kokoza
 email: tolakokoza@gmail.com
+jobtitle: Quantitative Risk Analyst
+company: United Services Automobile Association
+cv: assets/KokozaCV2018.pdf
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
