Removing JMP from site for now - will need to remove links

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Anatolii (Tola) Kokoza
 username: Anatolii Kokoza
 email: tolakokoza@gmail.com
-jobtitle: Quantitative Risk Analyst
+jobtitle: Lead Modeling Analyst
 company: United Services Automobile Association
 cv: assets/KokozaCV2018.pdf
 description: >- # this means to ignore newlines until "baseurl:"
